tests/out/error/other/match.in.bt
n := 123
match n {
	'asd' {}
	456 {}
	true {}
	else {}
}
