tests/out/error/other/match.out
tests/out/error/other/match.in.bt:3:2 error: cannot match string to i32
tests/out/error/other/match.in.bt:5:1 error: cannot match bool to i32
